# backend/project/login/view.py
@@ -4,7 +4,7 @@ from project.models import User
 from flask_restful import Api,Resource
 
 from project import app
-from resources import Signup,AllUsersResource,getUser
+from resources import Signup,AllUsersResource,getUser, Login
 
 api = Api(app)
 
@@ -12,5 +12,6 @@ login_blueprint = Blueprint('login',__name__,
                                     template_folder='templates/login')
 
 api.add_resource(Signup, '/signup') #TODO: SIGN IN RETURNING TOKEN 
+api.add_resource(Login, '/login')
 api.add_resource(getUser, '/findUser')
 api.add_resource(AllUsersResource, '/allUsers')
